objects/Customer__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax Number</description>
        <label>Fax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Valid_Id_Proof__c</fullName>
        <label>Valid Id Proof</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Valid_Id_Proof_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Valid_Id_Proof__c  &lt;&gt; &quot;Pan Card&quot;, Valid_Id_Proof__c= &quot;Passport&quot;, Valid_Id_Proof__c=&quot;Voter ID&quot;, Valid_Id_Proof__c=&quot;Driving License&quot;)</errorConditionFormula>
        <errorDisplayField>Valid_Id_Proof__c</errorDisplayField>
        <errorMessage>This is not a valid Id proof</errorMessage>
    </validationRules>
</CustomObject>